# synthete_analysis

./: .gitignore  README.md  clean.ipynb  draft.ipynb  draft_clustering.ipynb  draft_general.ipynb  newer.ipynb  newer_Align_analysis_with_Doyle_algo__primary_balance__neighbors__band_logic_.md  notes.txt  pyproject.toml  requirements.txt
src/synthete_analysis/: __init__.py  analysis.py  cleanup.py  constants.py  retrieval.py
