[project]
name = "synthete_analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "polars>=1.32.0",
    "ruff>=0.12.7",
    "sdmx1>=2.22.0",
]
authors = [
    { name = "eduardolzevallos", email = "eduardolzevallos@gmail.com" }
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
