[project]
name = "synthete_analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "polars>=1.32.0",
    "ruff>=0.12.7",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sdmx1>=2.22.0",
    "statsmodels>=0.14.5",
]
authors = [
    { name = "eduardolzevallos", email = "eduardolzevallos@gmail.com" }
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
